--- a/styles/style.css
+++ b/styles/style.css
@@ -57,14 +57,47 @@ ol {
   block-size: 298px;
   display: flex;
   flex-direction: column;
-  gap: 30px;
   overflow-y: auto;
 }
 
 .content__details {
-  block-size: 100%;
   inline-size: 100%;
+  block-size: 100%;
   display: flex;
   flex-direction: column;
   gap: 26px;
+}
+
+.result__video-container {
+  inline-size: 711px;
+  block-size: 456px;
+  margin-bottom: 11px;
+}
+
+.result__video {
+  inline-size: 100%;
+  block-size: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.content__list-item:not(:last-child) {
+  margin-bottom: 30px;
+}
+
+.content__video-card {
+  display: flex;
+  justify-content: space-between;
+}
+
+.content__video-card-thumbnail {
+  inline-size: 194px;
+  block-size: 103px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.content__video-card-description-container {
+  flex-grow: 1;
+  padding: 2px;
 }
