--- a/styles/style.css
+++ b/styles/style.css
@@ -47,25 +47,81 @@ ol {
   inline-size: 1140px;
 }
 
+/* RESULT */
+
+.result__video-container {
+  inline-size: 711px;
+  block-size: 386px;
+  margin-bottom: 16px;
+  position: relative;
+}
+
+.result__video {
+  inline-size: 100%;
+  block-size: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+/* SEARCH FORM */
+
 .search-form {
   display: flex;
   justify-content: space-between;
   align-items: start;
 }
 
+.search-form__fieldset {
+  border: none;
+  inline-size: fit-content;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
 .search-form__fieldset-title {
   font-size: 18px;
   font-weight: 400;
-  margin-bottom: 5px;
 }
 
-.content__list {
-  block-size: 298px;
+.search-form__label {
   display: flex;
-  flex-direction: column;
-  overflow-y: auto;
-  position: relative;
+  align-items: center;
+  gap: 15px;
+  cursor: pointer;
 }
+
+.search-form__label-text {
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.search-form__textfield {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-color: transparent;
+  inline-size: 225px;
+  block-size: 27px;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-size: 18px;
+  font-weight: 400;
+  color: rgb(255, 255, 255, 0.7);
+  border-top: 1px solid #fff;
+  border-right: none;
+  border-bottom: 1px solid #fff;
+  border-left: none;
+}
+
+.search-form__textfield:active {
+  outline: 1px solid #fff;
+}
+
+.search-form__textfield:focus {
+  outline: 1px solid #fff;
+}
+
+/* CONTENT DETAILS */
 
 .content__details {
   inline-size: 100%;
@@ -87,22 +143,23 @@ ol {
   color: #545050;
 }
 
-.result__video-container {
-  inline-size: 711px;
-  block-size: 386px;
-  margin-bottom: 16px;
-  position: relative;
-}
+/* CONTENT LIST */
 
-.result__video {
-  inline-size: 100%;
-  block-size: 100%;
-  object-fit: cover;
-  object-position: center;
+.content__list {
+  block-size: 298px;
+  display: flex;
+  flex-direction: column;
+  overflow-y: auto;
+  position: relative;
 }
 
 .content__list-item:not(:last-child) {
   margin-bottom: 30px;
+}
+
+.content__card-link {
+  text-decoration: none;
+  color: #fff;
 }
 
 .content__video-card {
@@ -110,20 +167,8 @@ ol {
   justify-content: space-between;
 }
 
-.content__video-card-thumbnail {
-  inline-size: 194px;
-  block-size: 103px;
-  object-fit: cover;
-  object-position: center;
-}
-
 .content__video-card-description-container {
   flex-grow: 1;
-}
-
-.content__card-link {
-  text-decoration: none;
-  color: #fff;
 }
 
 .content__video-card-title {
@@ -140,4 +185,23 @@ ol {
   font-weight: 400;
   line-height: 16.2px;
   margin: 0px 2px 4px;
+}
+
+.content__video-card-thumbnail {
+  inline-size: 194px;
+  block-size: 103px;
+  object-fit: cover;
+  object-position: center;
+}
+
+/* SPECIAL */
+
+.visually-hidden {
+  position: absolute;
+  inline-size: 1px;
+  block-size: 1px;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  white-space: nowrap;
 }
