--- a/styles/style.css
+++ b/styles/style.css
@@ -67,8 +67,7 @@ ol {
 
 .search-form {
   display: flex;
-  justify-content: space-between;
-  align-items: start;
+  gap: 40px;
 }
 
 .search-form__fieldset {
@@ -87,8 +86,8 @@ ol {
 .search-form__label {
   display: flex;
   align-items: center;
-  gap: 15px;
   cursor: pointer;
+  gap: 5px;
 }
 
 .search-form__label-text {
@@ -118,7 +117,76 @@ ol {
 }
 
 .search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__textfield:has(:focus-visible) {
   outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+  gap: 15px;
+}
+
+.search-form__pseudo-checkbox {
+  display: flex;
+  inline-size: 19px;
+  block-size: 19px;
+  border: 1px solid #fff;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-form__checkbox:checked + .search-form__pseudo-checkbox::after {
+  content: '';
+  background-color: #fff;
+  inline-size: 15px;
+  block-size: 15px;
+}
+
+.search-form__label:hover {
+  text-decoration: underline 1px #fff;
+  text-underline-offset: 5px;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.button {
+  inline-size: 194px;
+  block-size: 34px;
+  border: 1px solid #fff;
+  cursor: pointer;
+  background-color: transparent;
+  color: #fff;
+  font-family: 'Fira Sans Condensed', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+}
+
+.button:active {
+  background-color: #545050;
+}
+
+.button:hover {
+  text-decoration: underline 1px #fff;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__submit-button {
+  align-self: flex-end;
 }
 
 /* CONTENT DETAILS */
@@ -158,8 +226,32 @@ ol {
 }
 
 .content__card-link {
+  display: block;
   text-decoration: none;
   color: #fff;
+  margin: 2px;
+  padding: 2px;
+}
+
+.content__card-link:active {
+  background-color: #545050;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:hover {
+  text-decoration: underline 1px #FFF;
+}
+
+.content__card-link:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.content__card-link_current {
+  background-color: #545050;
 }
 
 .content__video-card {
@@ -192,6 +284,10 @@ ol {
   block-size: 103px;
   object-fit: cover;
   object-position: center;
+}
+
+.more-button {
+  inline-size: 100%;
 }
 
 /* SPECIAL */
