--- a/styles/style.css
+++ b/styles/style.css
@@ -105,11 +105,15 @@ ol {
   font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   font-weight: 400;
-  color: rgb(255, 255, 255, 0.7);
+  color: #fff;
   border-top: 1px solid #fff;
   border-right: none;
   border-bottom: 1px solid #fff;
   border-left: none;
+}
+
+.search-form__textfield::placeholder {
+  color: rgba(255, 255, 255, 0.7);
 }
 
 .search-form__textfield:active {
@@ -270,6 +274,10 @@ ol {
   font-family: Oswald, sans-serif;
   line-height: 100%;
   margin: 2px 2px 6px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+  max-width: 192px; 
 }
 
 .content__video-card-description {
